tests/baselines/reference/stringLiteralTypesOverloadAssignability02.errors.txt
tests/cases/conformance/types/stringLiteral/stringLiteralTypesOverloadAssignability02.ts(2,10): error TS2382: Specialized overload signature is not assignable to any non-specialized signature.
tests/cases/conformance/types/stringLiteral/stringLiteralTypesOverloadAssignability02.ts(3,10): error TS2381: A signature with an implementation cannot use a string literal type.
tests/cases/conformance/types/stringLiteral/stringLiteralTypesOverloadAssignability02.ts(7,10): error TS2382: Specialized overload signature is not assignable to any non-specialized signature.
tests/cases/conformance/types/stringLiteral/stringLiteralTypesOverloadAssignability02.ts(8,10): error TS2381: A signature with an implementation cannot use a string literal type.


==== tests/cases/conformance/types/stringLiteral/stringLiteralTypesOverloadAssignability02.ts (4 errors) ====
    
    function f(x: "foo"): number;
             ~
!!! error TS2382: Specialized overload signature is not assignable to any non-specialized signature.
    function f(x: "foo"): number {
             ~
!!! error TS2381: A signature with an implementation cannot use a string literal type.
        return 0;
    }
    
    function g(x: "bar"): number;
             ~
!!! error TS2382: Specialized overload signature is not assignable to any non-specialized signature.
    function g(x: "bar"): number {
             ~
!!! error TS2381: A signature with an implementation cannot use a string literal type.
        return 0;
    }
    
    let a = f;
    let b = g;
    
    a = b;
    b = a;